--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
             </div>
           </div>
         </div>
+        <button type="submit" class="btn btn-success">Place your Order</button>
       </form>
+
+      <div class="row">
+        <div class="show-order">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
