--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
       <h1>Trent's Pizza Parlor</h1>
       <h2>A slice of Love</h2>
       <form id="customer-input">
-        <label >
-  <input type="checkbox" class="custom-control-input">
-
-  <span>Check this custom checkbox</span>
-</label>
         <div class="form-group toppings-options">
           <h2>Select Toppings:</h2>
           <div class="row">
@@ -81,8 +76,8 @@
             <div class="form-group">
               <label for="name">Name:</label>
               <input type="text" id="name" class="form-control">
-              <!--<label for="address">Address:</label>
-              <input type="text" id="address" class="form-control">-->
+              <label for="address">Address:</label>
+              <input type="text" id="address" class="form-control">
             </div>
           </div>
         <button type="submit" class="btn btn-success">Place your Order</button>
