Make list items font smaller

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <input type="text" id="address" class="form-control">
             </div>
           </div>
-        <button type="submit" class="btn btn-danger">Place your Order</button>
+        <button type="submit" class="btn btn-success">Place your Order</button>
       </form>
 
       <div class="row">
